<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_toolbar"
            android:background="@color/tool_bar"
            android:elevation="@dimen/elevation_all"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/toolbar_menu"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/text_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/black_3f3a3a"
                android:letterSpacing="0.15"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:text="LE" />

            <TextView
                android:id="@+id/text_toolbar_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/noto_sans"
                android:textSize="12sp"
                android:textColor="@color/black_3f3a3a"
                tools:text="@string/at" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/layout_main_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

        </LinearLayout>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tool_bar"
            app:itemBackground="@color/tool_bar"
            android:layout_alignParentBottom="true"
            app:itemIconSize="30dp"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/menu_bottom_navigation" />

    </android.support.constraint.ConstraintLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/background"
        app:headerLayout="@layout/nav_header_drawer"
        app:itemIconTint="@drawable/drawer_item_selector"
        app:itemTextColor="@drawable/drawer_item_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_drawer"
        app:theme="@style/NavigationViewStyle" >

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>