<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<Spinner-->
        <!--android:id="@+id/spinner_user_type_selector"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:entries="@array/user_type_array"-->
        <!--android:fontFamily="@font/noto_sans"-->
        <!--android:gravity="center"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/button_facebook_login"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/imageLogo"-->
        <!--app:layout_constraintVertical_chainStyle="packed" />-->

    <Button
        android:id="@+id/button_facebook_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/login_facebook_button_board"
        android:fontFamily="@font/noto_sans"
        android:letterSpacing="0.15"
        android:stateListAnimator="@null"
        android:text="@string/facebookLoginText"
        android:textAllCaps="false"
        android:textColor="@color/colorBackground"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radios_group_login_user_type" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/radios_group_login_user_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo_with_text" />

    <RadioGroup
        android:id="@+id/radios_group_login_user_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_facebook_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo">

        <RadioButton
            android:id="@+id/button_login_user_type_landlord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/green_6eafa6"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:letterSpacing="0.15"
            android:tag="@string/landlord"
            android:text="@string/landlord"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/button_login_user_type_tenant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_radio_button_spacing"
            android:layout_weight="1"
            android:buttonTint="@color/green_6eafa6"
            android:fontFamily="@font/noto_sans"
            android:gravity="center"
            android:letterSpacing="0.15"
            android:tag="@string/tenant"
            android:text="@string/tenant"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

    </RadioGroup>

    <ProgressBar
        android:id="@+id/progress_bar_logging_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:theme="@style/ProgressTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>