<resources>
    <string name="app_name">LeLeLe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="_coming_soon">%s COMING SOON!</string>
    <string name="at">@</string>

    <!-- Drawer -->
    <string name="switch_group_to_">已將群組切換至 %s</string>
    <string name="ask_to_create_a_group">請新增群組</string>
    <string name="preparing">準備中</string>
    <string name="ask_to_go_to_group_list">請到我的應用 > 群組清單 進行編輯</string>
    <string name="no_group_info">尚未指定群組</string>

    <!-- Facebook SDK -->
    <string name="facebook_app_id">2385558301456908</string>
    <string name="fb_login_protocol_scheme">fb2385558301456908</string>

    <!-- Navigation Toolbar Title -->
    <string name="profile_default_name">Loading…</string>
    <string name="home">首頁</string>
    <string name="application">應用</string>
    <string name="notify">通知</string>
    <string name="profile">個人</string>

    <!-- Application Button -->
    <string name="application_my_application">我的應用</string>
    <string name="application_other_service">其他服務</string>
    <string name="application_electricity">電費</string>
    <string name="application_message">訊息</string>
    <string name="application_contract">合約</string>
    <string name="application_reservation">預約</string>
    <string name="application_garbage_truck">垃圾車</string>
    <string name="application_electricity_edit">編輯電費</string>
    <string name="application_tenants_list">房客清單</string>
    <string name="application_room_list">房間清單</string>
    <string name="application_groups_list">群組清單</string>
    <string name="select_group_before_edit">選擇群組後，才可進行編輯。</string>
    <string name="select_group_before_chatting">選擇群組後，才可進行聊天。</string>

    <!-- Electricity Fee -->
    <string name="electricity_fee">金額</string>
    <string name="month">月</string>
    <string name="scale_last">上月度數</string>
    <string name="scale_this">本月度數</string>
    <string name="scale_total">總度數</string>
    <string name="room_number">房號</string>
    <string name="clean_button">清除</string>
    <string name="has_empty_data">電費欄位不得為空!</string>
    <string name="empty_unit_electricity_fee">單位電費不得為空!</string>
    <string name="last_scale_can_not_be_empty">上月電度數不得為空!</string>
    <string name="electricity_fee_uploading">電費上傳中，請稍等…</string>
    <string name="electricity_fee_downloading">電費下載中，請稍等…</string>
    <string name="unit_electricity_fee_">本月單位電費( 元 / 度 ) : </string>
    <string name="unit_electricity_fee_check">確定</string>
    <string name="set_unit_electricity_fee_">您已設定單位電費為 %s 元</string>

    <!-- Login and Logout -->
    <string name="facebookLoginText">Facebook Login</string>
    <string name="logout">登出</string>

    <!-- User Type Selector -->
    <string name="landlord">房東</string>
    <string name="tenant">房客</string>
    <string name="select_user_type">請選擇登入類型</string>
    <string-array name="user_type_array">
        <item>@string/select_user_type</item>
        <item>@string/landlord</item>
        <item>@string/tenant</item>
    </string-array>

    <!-- Group Function -->
    <string name="group_name">群組名稱</string>
    <string name="group_address">群組地址</string>
    <string name="group_address_">群組地址:</string>
    <string name="group_information">群組資訊</string>
    <string name="group_number_of_rooms">房間數量</string>
    <string name="add_room">新增房間</string>
    <string name="group_edit">編輯群組</string>
    <string name="group_list_empty">目前尚無群組清單，請點擊新增鈕開始新增。</string>

    <!-- Group Details -->
    <string name="should_not_repeat_room_name">房間名稱請勿重複!</string>
    <string name="room_name_cannot_be_empty">房間名稱不得為空!</string>
    <string name="group_details_edit_done">編輯完成!</string>
    <string name="info_cannot_be_empty">資訊不得為空!</string>

    <!-- Room List -->
    <string name="tenant_name">房客: </string>
    <string name="tenant_empty">目前尚無房客</string>
    <string name="tenant_inviting">房客邀請中</string>
    <string name="enter_tenant_email">請輸入房客信箱搜尋</string>
    <string name="invite_tenant">邀請房客</string>
    <string name="delete_tenant">刪除房客</string>
    <string name="cancel_inviting">取消邀請</string>

    <!-- Inviting -->
    <string name="inviting">發送邀請</string>
    <string name="invitation_sending">邀請房客</string>
    <string name="no_tenant_exist">查無此房客!</string>

    <!-- Inviting Action -->
    <string name="cancel_action_content">確定要取消對%s的邀請?</string>
    <string name="remove_action_content">確定要移除%s?</string>
    <string name="invitation_content">房東%s邀請您進入 %s 群組 %s 號房。</string>
    <string name="inviting_notification">邀請通知</string>
    <string name="yes">確定</string>
    <string name="no">取消</string>

    <!-- Home -->
    <string name="no_article">目前尚無任何文章!</string>
    <string name="mock_time">yyyy-mm-dd</string>
    <string name="select_group_to_release_article">請選擇要發表文章的群組!</string>
    <string name="electricity_understand">收到</string>
    <string name="profile_filling_request">敬愛的%s您好，請您到個人頁面，完成個人資料編輯。</string>
    <string name="profile_filling_title">個人資料通知</string>

    <!-- Electricity -->
    <string name="not_bind_yet">您尚未屬於任何群組，故還無法使用此功能。</string>
    <string name="electricity_fee_update_notification">電費更新通知</string>
    <string name="electricity_content">%s您好，本期電費金額為 %s 元，詳細內容請至電費應用查看。</string>

    <!-- Post View -->
    <string name="new_post">創建貼文</string>
    <string name="say_something">想說些甚麼呢?</string>
    <string name="post_title">文章標題</string>
    <string name="author_name">作者</string>
    <string name="content_empty">文章標題與內容不得為空!!</string>

    <!-- Profile View -->
    <string name="personal_info">個人資訊</string>
    <string name="rental_info">租屋資訊</string>
    <string name="user_name">姓名</string>
    <string name="address">地址</string>
    <string name="cellphone_number">電話</string>
    <string name="email">電子信箱</string>
    <string name="id_card_number">身分證字號</string>
    <string name="landlord_email_">房東信箱</string>
    <string name="group_name_">群組名稱</string>
    <string name="room_number_">房間號碼</string>
    <string name="empty_info_not_allow">個人資訊欄位皆不得為空!!</string>
    <string name="there_has_no_rental_info">目前尚無租屋資訊</string>

    <!-- Notification Channel -->
    <string name="channel_name">LeLeLe</string>
    <string name="channel_description">LeLeLe</string>

    <!-- Notify Fragment -->
    <string name="no_notify">目前尚無通知!</string>
    <string name="agree_invitation_content">%s已經同意您的邀請，進入 %s 群組的 %s 號房。</string>
    <string name="invitation_result_title">邀請結果</string>
    <string name="remove_from_room_title">移出房間</string>
    <string name="disagree_invitation_content">%s已經拒絕您的邀請。</string>
    <string name="remove_from_room_content">您已被移出 %s 群組，%s 號房。</string>

    <!-- Message Fragment -->
    <string name="message">訊息</string>
    <string name="messaging_list">聊天清單</string>
    <string name="say_hi">安安~你好!</string>
    <string name="his_name">他的名字</string>
    <string name="is_read">已讀</string>
    <string name="unread_amount">99+</string>

</resources>
